--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,10 +1,18 @@
-FROM node:18-alpine
+# Step 1: Build the React app
+FROM node:18-alpine AS builder
 
 WORKDIR /app
-COPY package.json . /
+
+COPY package.json ./
 RUN npm install
-COPY . /app
 
-EXPOSE 3000
+COPY . ./
+RUN npm run build
 
-CMD ["npm", "start"]
+FROM nginx:alpine
+
+COPY --from=builder /app/build /usr/share/nginx/html
+
+EXPOSE 80
+
+CMD ["nginx", "-g", "daemon off;"]
