--- a/k8s/server-deploy.yaml
+++ b/k8s/server-deploy.yaml
@@ -29,7 +29,18 @@ spec:
               key: uri
         readinessProbe:
           httpGet:
-            path: /click
+            path: /health
             port: 4000
           initialDelaySeconds: 15
           periodSeconds: 5
+          timeoutSeconds: 3
+          successThreshold: 1
+          failureThreshold: 3
+        livenessProbe:
+          httpGet:
+            path: /health
+            port: 4000
+          initialDelaySeconds: 30
+          periodSeconds: 10
+          timeoutSeconds: 3
+          failureThreshold: 3
