--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -34,5 +34,6 @@ jobs:
 
       - name: Deploy to S3
         run: |
+          aws s3 mv s3://click-frontend-test/builds/previous s3://click-frontend-test/backups/$(date) --recursive || true
           aws s3 mv s3://click-frontend-test/builds/current s3://click-frontend-test/builds/previous --recursive || true
           aws s3 cp client/build s3://click-frontend-test/builds/current --recursive
