--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,8 +1,10 @@
 on:
   push:
     branches:
-      - feature/secrets
-
+      - main
+    paths:
+      - 'client/**'
+      
 permissions:
   id-token: write
   contents: read
